using phabricator api tokens instead of certs and users

--- a/package.json
+++ b/package.json
@@ -1,35 +1,26 @@
 {
   "name": "hubot-phabricator",
   "description": "A hubot script to expand references to Phabricator objects",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "author": "David Lynch <kemayo@gmail.com>",
   "license": "MIT",
-
   "keywords": [
     "hubot",
     "hubot-scripts",
     "phabricator"
   ],
-
   "repository": {
     "type": "git",
     "url": "git://github.com/kemayo/hubot-phabricator.git"
   },
-
   "bugs": {
     "url": "https://github.com/kemayo/hubot-phabricator/issues"
   },
-
   "dependencies": {
-    "coffee-script": "~1.6",
-    "canduit": "~1.0.0"
+    "canduit": "^1.1.2",
+    "coffee-script": "~1.6"
   },
-
-  "devDependencies": {
-  },
-
+  "devDependencies": {},
   "main": "index.coffee",
-
-  "scripts": {
-  }
+  "scripts": {}
 }
